# atlas-clean-code-mai-2024

./: README.md
ArrayFiller/: CMakeLists.txt  main.cpp
NimGameProject/: CMakeLists.txt  main.cpp
NimGameProject/src/client/: Client.h
NimGameProject/src/game/: AbstractGame.h  Game.h
NimGameProject/src/game/nimgame/: NimGameImpl.h
NimGameProject/src/game/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h
NimGameProject/src/game/player/: AbstractPlayer.h  Player.h
NimGameProject/src/io/: ConsoleWriter.h  Writer.h
VectorFillerExcercise/: CMakeLists.txt  main.cpp
VectorFillerExcercise/src/bootstrap/: Bootstrap.h
VectorFillerExcercise/src/client/impl/: ClientImpl.h
VectorFillerExcercise/src/collection/: AbstractVectorFactory.h  VectorFactoryBuilder.h
VectorFillerExcercise/src/collection/impl/decorators/: VectorFactoryBenchmarkDecorator.h
VectorFillerExcercise/src/collection/impl/parallel/: VectorFactoryParallelImpl.h
VectorFillerExcercise/src/time/: Stopwatch.h
VectorFillerExcercise/src/time/impl/: StopwatchImpl.h  decorator.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
